# sqlmodel-translation

./: .gitignore  404.html  Makefile  README.md  books.db  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
concepts/: index.html
docs/: concepts.md  index.md  quickstart.md  reference.md
docs/api/: test.md
examples/: quickstart.py
modeltranslation/: test_module.py
quickstart/: index.html
reference/: index.html
search/: search_index.json
src/: getattr_experiments.py  prototype_demo.py  quickstart.py  test.py  test2.py  test3.py  test4.py  test_metaclass.py
src/books_demo/: app.py  database.db  database.py  models.py  readme.md  schemas.py  seed_data.py
src/modeltranslation/: __init__.py  exceptions.py  fastapi_middleware.py  locale_manager.py  test_module.py  translator.py
tests/: _test.py  conftest.py  test.py  tr_test.py  translator_test.py
