[project]
name = "sqlmodel-translation"
version = "0.1.0"
description = "Translation library for SQLModel and FastAPI"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.119.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-material>=9.6.22",
    "pytest>=8.4.2",
    "tox>=4.31.0",
    "tox-uv>=1.29.0",
    "fastapi[standard]>=0.119.1",
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[project.urls]
Repository = "https://github.com/Dnafivuq/sqlmodel-translation"
Documentation = "https://dnafivuq.github.io/sqlmodel-translation/"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "modeltranslation"


[tool.pytest.ini_options]
testpaths = ["./tests/*"]


[tool.tox]
requires = ["tox>=4"]
env_list = ["3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
description = "run tests"
deps = [
    "pytest>=8"
]

commands = [["pytest", "-q", "tests", { replace = "posargs", extend = true}]]

# Doctests are currently turned off. This is because SQLModel saves state
# between doctests and we haven't found a way to fix that.
# ["pytest", "-q", "--doctest-modules", "src"]


[tool.tox.env-3.12]
description = "run unit tests and doctests in python-3.12"

[tool.tox.env-3.13]
description = "run unit tests and doctests in python-3.13"

[tool.tox.env-3.14]
description = "run unit tests and doctests in python-3.14"


[tool.ruff]
line-length = 109


[tool.ruff.lint]
select = ["ALL"]

ignore = [
    # Rules conflicting with the formatter
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",

    # Conflicting rules
    "D203",
    "D213",

    # Annoying rules
    "D1",   # Required docstrings
    "T20",  # No print()
    "S101",  # No assert
    "TD"    # Too strict TODO rules

]
